# Fiasco

codec/: decoder.c
data/: test.wfa
input/: read.c  tree.c  weights.c
lib/: dither.c  misc.h
msvc/: CMakeLists.txt  build.ps1  config.h  pyfiasco.cpp
